--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,4 @@
 <h1>
   {{title}}
 </h1>
-<fa-other></fa-other>
-<fa-another>
-	<div>
-		<h1> Hello </h1>
-		<p>World!</p>
-	</div>
-</fa-another>
-<fa-another>
-	<p> Something Else </p>
-</fa-another>
+<fa-databinding></fa-databinding>
